--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,1 +1,47 @@
-/* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700&display=swap')
+*
+	margin: 0
+	padding: 0
+	box-sizing: border-box
+	font-family: Inter
+
+a
+	text-decoration: none
+
+$button-success: rgba(7, 200, 142, 1)
+$button-success-hover: rgb(0, 150, 106)
+
+@mixin modal-default-font-settings
+	font-weight: 400
+	font-size: 14px
+
+
+@mixin button-example
+	display: flex
+	height: 56px
+	justify-content: center
+	align-items: center
+	border-radius: 8px
+	border: none
+	margin-top: 32px
+	font-size: 16px
+	line-height: 24px
+
+@mixin mainNavLink
+	font-weight: 400
+	font-size: 14px
+	line-height: 18px
+	letter-spacing: -0.15px
+	color: rgba(0, 11, 38, 0.64)
+
+@mixin mainNavLinkActive
+	@include mainNavLink
+	height: 100%
+	display: grid
+
+	color: rgb(0, 11, 38)
+	border-bottom: 2px solid rgb(15, 141, 106)
+	align-content: center
+
+	&:hover
+		color: rgb(0, 11, 38)
