login modal added

--- a/src/app/pages/main-page/main-page.component.html
+++ b/src/app/pages/main-page/main-page.component.html
@@ -1,3 +1,15 @@
 <main class='mainCards__wrapper'>
 	<app-banner-swiper></app-banner-swiper>
+	<button (click)='openModal()' cdkOverlayOrigin #trigger="cdkOverlayOrigin">
+		открыть модалку
+	</button>
+	<ng-template
+		cdkConnectedOverlay
+		[cdkConnectedOverlayOrigin]='trigger'
+		[cdkConnectedOverlayOpen]='isModalOpen'
+		[cdkConnectedOverlayHasBackdrop] = 'true'
+		(backdropClick)='isModalOpen = false'
+	class='modalCentered'>
+			<app-login-form (closeModal) = 'closeModal()'></app-login-form>
+	</ng-template>
 </main>
