--- a/src/app/pages/main-page/main-page.component.sass
+++ b/src/app/pages/main-page/main-page.component.sass
@@ -1,10 +1,10 @@
+
 .mainCards__wrapper
 	margin: 0 auto
 	max-width: 1200px
 	width: 100%
 	padding: 0 32px
 	margin-bottom: 108px
-
 .navCards
 	display: flex
 	justify-content: space-between
@@ -14,7 +14,12 @@
 
 .navCardsWrapper
 	width: 100%
-
+.modalCentered
+	width: 100%
+	height: 100%
+	display: flex
+	justify-content: center
+	align-items: center
 
 @media screen and (max-width: 795px)
 	.navCards
