--- a/src/app/pages/main-page/main-page.component.html
+++ b/src/app/pages/main-page/main-page.component.html
@@ -9,7 +9,7 @@
 		[cdkConnectedOverlayOpen]='isModalOpen'
 		[cdkConnectedOverlayHasBackdrop] = 'true'
 		(backdropClick)='isModalOpen = false'
-	class='modalCentered'>
-			<app-login-form (closeModal) = 'closeModal()'></app-login-form>
+	>
+			<app-partners-login-from (closeModal) = 'closeModal()'></app-partners-login-from>
 	</ng-template>
 </main>
