--- a/src/app/pages/main-page/main-page.component.html
+++ b/src/app/pages/main-page/main-page.component.html
@@ -12,4 +12,22 @@
 	>
 			<app-partners-login-from (closeModal) = 'closeModal()'></app-partners-login-from>
 	</ng-template>
+
+	<div class='navCardsWrapper'>
+		<div class='navCards'>
+			<app-main-page-card
+				text="Посмотри, где в твоем городе можно сдать вторсырьё на переработку"
+				title='Пункты сбора'
+				bgImg='./assets/images/map.svg'
+				link='/f'
+			></app-main-page-card>
+
+			<app-main-page-card
+				text="Используй заработанные экокоины для покупки товаров из переработанных материалов "
+				title='ЭкоМаркет'
+				bgImg='./assets/images/market.svg'
+				link='/f'
+			></app-main-page-card>
+		</div>
+	</div>
 </main>
