--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -48,6 +48,15 @@
 						О сервисе
 					</a>
 				</li>
+
+				<li class='navLink'>
+					<a
+						class='mainNavLink'
+						(click)='openLoginDialog()'
+					>
+						Войти
+					</a>
+				</li>
 			</ul>
 		</nav>
 	</header>
