--- a/src/app/components/login-email-form/login-email-form.component.html
+++ b/src/app/components/login-email-form/login-email-form.component.html
@@ -1,10 +1,3 @@
-<div class='modal__container'>
-	<div class='modal__firstRow'>
-		<h2 class='title'>Вход</h2>
-		<button class='modal__closeButton'
-		        (click)='closeModal.emit()'>X
-		</button>
-	</div>
 	<form
 		[formGroup]='formGroup'>
 		<input
@@ -41,14 +34,14 @@
 				value='Вход'></app-button>
 		</div>
 		<div class='modal__underLinks'>
-			<button>
+			<button  (click)='this.dialog.openCodeConfirmDialog()'>
 				Войти с помощью смс
 			</button>
-			<button>
+			<button  (click)='this.dialog.openRegDialog()'>
 				Регистрация
 			</button>
 		</div>
-		<div class='loginBtn'>
+		<div class='loginBtn' (click)='this.dialog.openPartnersLoginDialog()'>
 			<app-button
 				value='Вход для партнёров'
 				[isLarge]='true'
@@ -57,5 +50,3 @@
 			</app-button>
 		</div>
 	</form>
-</div>
-
