--- a/src/app/components/ui/main-page-card/main-page-card.component.html
+++ b/src/app/components/ui/main-page-card/main-page-card.component.html
@@ -5,7 +5,7 @@
 			<p class='navCardText'>{{text}}</p>
 			<a [href]='link' class='navCardBtn'>
 				<img
-					src='{rightArrow}'
+					src='./assets/images/rightArrow.png'
 					alt=''
 				/>
 			</a>
