--- a/src/app/pages/main-page/main-page.component.html
+++ b/src/app/pages/main-page/main-page.component.html
@@ -28,6 +28,8 @@
 				bgImg='./assets/images/market.svg'
 				link='/f'
 			></app-main-page-card>
+
+			<app-card-list-switcher></app-card-list-switcher>
 		</div>
 	</div>
 </main>
