--- a/src/app/components/login-email-form/login-email-form.component.html
+++ b/src/app/components/login-email-form/login-email-form.component.html
@@ -1,52 +1,60 @@
-	<form
-		[formGroup]='formGroup'>
-		<input
-			formControlName='email'
-			class='formInput'
-			[class.errorFormInput]='isControlValid("email")'
-			placeholder='Email'>
-		<ng-container *ngIf='validateControl("email","required")'>
-			<app-form-error-message validationMessage='Это поле обязательно'></app-form-error-message>
-		</ng-container>
-		<ng-container *ngIf='validateControl("email","email")'>
-			<app-form-error-message validationMessage='Неправильный формат почты'></app-form-error-message>
-		</ng-container>
-		<ng-container *ngIf='validateControl("email","maxlength")'>
-			<app-form-error-message validationMessage='Максимальная длина превышена'></app-form-error-message>
-		</ng-container>
-		<input
-			formControlName='password'
-			class='formInput'
-			[class.errorFormInput]='isControlValid("password")'
-			placeholder='Пароль'
-			type='password'>
-		<ng-container *ngIf='validateControl("password","required")'>
-			<app-form-error-message validationMessage='Это поле обязательно'></app-form-error-message>
-		</ng-container>
-		<ng-container *ngIf='validateControl("password","maxlength")'>
-			<app-form-error-message validationMessage='Максимальная длина превышена'></app-form-error-message>
-		</ng-container>
-		<div class='loginBtn'>
-			<app-button
-				[isLarge]='true'
-				[isPrimary]='true'
-				[submitFunc]='onSubmit("phone","password")'
-				value='Вход'></app-button>
-		</div>
-		<div class='modal__underLinks'>
-			<button  (click)='this.dialog.openCodeConfirmDialog()'>
-				Войти с помощью смс
-			</button>
-			<button  (click)='this.dialog.openRegDialog()'>
-				Регистрация
-			</button>
-		</div>
-		<div class='loginBtn' (click)='this.dialog.openPartnersLoginDialog()'>
-			<app-button
-				value='Вход для партнёров'
-				[isLarge]='true'
-				[isPrimary]='false'
-				[submitFunc]='onSubmit'>
-			</app-button>
-		</div>
-	</form>
+<form
+	[formGroup]='formGroup'
+>
+	<input
+		formControlName='email'
+		class='formInput'
+		[class.errorFormInput]='isControlValid("email")'
+		placeholder='Email'
+	>
+	<ng-container *ngIf='validateControl("email","required")'>
+		<app-form-error-message validationMessage='Это поле обязательно'></app-form-error-message>
+	</ng-container>
+	<ng-container *ngIf='validateControl("email","email")'>
+		<app-form-error-message validationMessage='Неправильный формат почты'></app-form-error-message>
+	</ng-container>
+	<ng-container *ngIf='validateControl("email","maxlength")'>
+		<app-form-error-message validationMessage='Максимальная длина превышена'></app-form-error-message>
+	</ng-container>
+	<input
+		formControlName='password'
+		class='formInput'
+		[class.errorFormInput]='isControlValid("password")'
+		placeholder='Пароль'
+		type='password'
+	>
+	<ng-container *ngIf='validateControl("password","required")'>
+		<app-form-error-message validationMessage='Это поле обязательно'></app-form-error-message>
+	</ng-container>
+	<ng-container *ngIf='validateControl("password","maxlength")'>
+		<app-form-error-message validationMessage='Максимальная длина превышена'></app-form-error-message>
+	</ng-container>
+	<div class='loginBtn'>
+		<app-button
+			[isLarge]='true'
+			[isPrimary]='true'
+			[submitFunc]='onSubmit("phone","password")'
+			value='Вход'
+		></app-button>
+	</div>
+	<div class='modal__underLinks'>
+		<button (click)='this.dialog.openCodeConfirmDialog()'>
+			Войти с помощью смс
+		</button>
+		<button (click)='this.dialog.openRegDialog()'>
+			Регистрация
+		</button>
+	</div>
+	<div
+		class='loginBtn'
+		(click)='this.dialog.openPartnersLoginDialog()'
+	>
+		<app-button
+			value='Вход для партнёров'
+			[isLarge]='true'
+			[isPrimary]='false'
+			[submitFunc]='onSubmit'
+		>
+		</app-button>
+	</div>
+</form>
