--- a/src/app/components/reg-form/reg-form.component.html
+++ b/src/app/components/reg-form/reg-form.component.html
@@ -1,34 +1,65 @@
-	<form
-		[formGroup]='formGroup'>
-		<input
-			formControlName='phone'
-			class='formInput'
-			[class.errorFormInput]='isControlValid("phone")'
-			placeholder='Телефон'>
-		<ng-container *ngIf='validateControl("phone","required")'>
-			<app-form-error-message validationMessage='Это поле обязательно'></app-form-error-message>
-		</ng-container>
-		<ng-container *ngIf='validateControl("phone","maxlength")'>
-			<app-form-error-message validationMessage='Максимальная длина превышена'></app-form-error-message>
-		</ng-container>
-		<div class='loginBtn'>
-			<app-button
-				[isLarge]='true'
-				[isPrimary]='true'
-				[submitFunc]='onSubmit("phone","password")'
-				value='Вход'></app-button>
-		</div>
-		<div class='modal__underLinks'>
-			<button (click)='this.dialog.openLoginDialog()'>
-				Я уже зарегестрировался(-ась)
-			</button>
-		</div>
-		<div class='loginBtn' (click)='this.dialog.openPartnersLoginDialog()'>
-			<app-button
-				value='Вход для партнёров'
-				[isLarge]='true'
-				[isPrimary]='false'
-				[submitFunc]='onSubmit'>
-			</app-button>
-		</div>
-	</form>
+<form
+	[formGroup]='formGroup'
+>
+	<input
+		formControlName='phone'
+		class='formInput'
+		[class.errorFormInput]='isControlValid("phone")'
+		placeholder='Телефон'
+	>
+	<ng-container *ngIf='validateControl("phone","required")'>
+		<app-form-error-message validationMessage='Это поле обязательно'></app-form-error-message>
+	</ng-container>
+	<ng-container *ngIf='validateControl("phone","maxlength")'>
+		<app-form-error-message validationMessage='Максимальная длина превышена'></app-form-error-message>
+	</ng-container>
+
+	<input
+		formControlName='password'
+		class='formInput'
+		[class.errorFormInput]='isControlValid("password")'
+		placeholder='Пароль'
+	>
+	<ng-container *ngIf='validateControl("password","required")'>
+		<app-form-error-message validationMessage='Это поле обязательно'></app-form-error-message>
+	</ng-container>
+
+	<input
+		formControlName='email'
+		class='formInput'
+		[class.errorFormInput]='isControlValid("email")'
+		placeholder='Email'
+	>
+	<ng-container *ngIf='validateControl("email","required")'>
+		<app-form-error-message validationMessage='Это поле обязательно'></app-form-error-message>
+	</ng-container>
+	<ng-container *ngIf='validateControl("email","email")'>
+		<app-form-error-message validationMessage='Неправильный формат почты'></app-form-error-message>
+	</ng-container>
+
+	<div class='loginBtn'>
+		<app-button
+			[isLarge]='true'
+			[isPrimary]='true'
+			[submitFunc]='onSubmit()'
+			value='Зарегистрироваться'
+		></app-button>
+	</div>
+	<div class='modal__underLinks'>
+		<button (click)='this.dialog.openLoginDialog()'>
+			Я уже зарегистрировался(-ась)
+		</button>
+	</div>
+	<div
+		class='loginBtn'
+		(click)='this.dialog.openPartnersLoginDialog()'
+	>
+		<app-button
+			value='Вход для партнёров'
+			[isLarge]='true'
+			[isPrimary]='false'
+			[submitFunc]='onSubmit'
+		>
+		</app-button>
+	</div>
+</form>
