fixed auth and added guard

--- a/src/app/components/login-form/login-form.component.html
+++ b/src/app/components/login-form/login-form.component.html
@@ -30,7 +30,7 @@
 		<app-button
 			[isLarge]='true'
 			[isPrimary]='true'
-			[submitFunc]='onSubmit(formGroup.value.phone, formGroup.value.password)'
+			[submitFunc]='onSubmit()'
 			value='Вход'
 		></app-button>
 	</div>
