--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700&display=swap')
 @import "~@angular/cdk/overlay-prebuilt.css"
+@import url('https://unpkg.com/leaflet@1.8.0/dist/leaflet.css')
 
 *
 	margin: 0
