--- a/src/app/components/cards/promocode-card/promocode-card.component.html
+++ b/src/app/components/cards/promocode-card/promocode-card.component.html
@@ -1,8 +1,8 @@
 <div class='promoCodeCard'>
 	<div class='promoCodeImgWrapper'>
-		<img src='' alt="" class='promoCodeImg'/>
+		<img [src]='img' alt="" class='promoCodeImg'/>
 	</div>
-	<div class={styles.promoCodeCardInfoWrapper}>
+	<div class=promoCodeCardInfoWrapper>
 		<ul class='infoList'>
 			<li>
 				<label>Дата создания:</label>
