--- a/src/app/components/filter/filter.component.sass
+++ b/src/app/components/filter/filter.component.sass
@@ -14,3 +14,13 @@
 	padding: 0
 	max-height: 500px
 	overflow-y: scroll
+
+h3
+	font-style: normal
+	font-weight: 500
+	font-size: 16px
+	line-height: 24px
+	margin: 0
+
+.subfilter_container
+	margin-top: 24px
