mobile filterModals added

--- a/src/app/pages/market-page/market-page.component.html
+++ b/src/app/pages/market-page/market-page.component.html
@@ -10,7 +10,7 @@
 	<div class='mainContentWrapper'>
 		<div class='temp'>
 			<button class='removeFiltersBtn'
-			        onClick='() => addModal(MobileFiltersModal)'>
+			        (click)='openFiltersDialog()'>
 				Фильтры
 			</button>
 			<div class='filters_wrapper'>
