--- a/src/app/components/code-confirm-form/code-confirm-form.component.sass
+++ b/src/app/components/code-confirm-form/code-confirm-form.component.sass
@@ -1,4 +1,4 @@
-@use "src/app/components/login-form/login-form.component"
+@use "../modals/modal-content/login-form/login-form.component"
 .codeModal__phone_number_container
 	display: flex
 	flex-direction: column
