--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -81,6 +81,37 @@
 					</a>
 				</li>
 			</ng-container>
+
+			<ng-container *ngIf='!isAuth$'>
+				<li class='navLink header_balance'>
+					<div class='headerIcon'>
+						<img src='{ecocoin}'
+						     width='{24}'
+						     height='{24}/'>
+					</div>
+					<p></p>
+				</li>
+
+				<a routerLink='/profile/promo_codes'
+				   class='navLink'>
+					<div class='headerIcon'>
+						<img src='{getUserInfo().photo_url}'
+						     class='photo_header/'>
+					</div>
+					<p></p>
+				</a>
+
+			</ng-container>
+
 		</ul>
+		<div class='navLink header_balance header_mobile_auth'>
+			<button class='burgerMenu' (click)='openBurgerMenu()'>
+				<app-icon [item]='"burger"'
+				          [width]='24'
+				          [height]='24'>
+
+				</app-icon>
+			</button>
+		</div>
 	</header>
 </div>
