--- a/src/app/components/modals/modal-containers/modal-container/modal-container.component.html
+++ b/src/app/components/modals/modal-containers/modal-container/modal-container.component.html
@@ -1,7 +1,11 @@
 <div class='modal__container'>
 	<div class='modal__firstRow'>
 		<h2 class='title'>{{dialogTitle}}</h2>
-		<button class='modal__closeButton' [appDialogClose]>X</button>
+		<button class='modal__closeButton' [appDialogClose]>
+			<app-icon [width]='18' [height]='18' [item]='"closeButton"'>
+
+			</app-icon>
+		</button>
 	</div>
 	<ng-template [cdkPortalOutlet]="portal">
 	</ng-template>
