--- a/src/app/components/modals/modal-content/login-form/login-form.component.sass
+++ b/src/app/components/modals/modal-content/login-form/login-form.component.sass
@@ -1,3 +1,5 @@
+@import "src/assets/styles/mixins.sass"
+
 .formInput
 	display: flex
 	border: 1px solid rgba(0, 11, 38, 0.16)
@@ -5,6 +7,11 @@
 	border-radius: 8px
 	padding: 20px 16px
 	width: 384px
+
+	@include _700
+		width: 100%
+
+
 .title
 	font-size: 28px
 .errorFormInput
