--- a/src/app/pages/main-page/main-page.component.sass
+++ b/src/app/pages/main-page/main-page.component.sass
@@ -1,9 +1,11 @@
+@import "src/assets/styles/mixins.sass"
 
 .mainCards__wrapper
 	margin: 0 auto
 	max-width: 1200px
 	width: 100%
 	margin-bottom: 108px
+
 .navCards
 	display: flex
 	justify-content: space-between
@@ -13,12 +15,15 @@
 
 .navCardsWrapper
 	width: 100%
+
 .modalCentered
 	width: 100%
 	height: 100%
 	display: flex
 	justify-content: center
 	align-items: center
+
+
 
 @media screen and (max-width: 795px)
 	.navCards
@@ -30,3 +35,7 @@
 		z-index: 1
 	.mainCards__wrapper
 		padding: 0
+
+	.card
+		display: flex
+		justify-content: center
