added footer and modals changes

--- a/src/app/components/cards/user-card/user-card.component.html
+++ b/src/app/components/cards/user-card/user-card.component.html
@@ -1,7 +1,7 @@
 <div class='userCard'>
 	<div>
 		<div class='userAvatarContainer'>
-			<img src='{avatar}'
+			<img src='./assets/images/34Syn2ezKLM.jpeg'
 			     alt=''
 			     class='userCardImg' />
 		</div>
