--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,10 @@
-<Header>
-</Header>
+<div class='page'>
+	<Header>
+	</Header>
 
-<main>
-	<router-outlet></router-outlet>
-</main>
+	<main>
+		<router-outlet></router-outlet>
+	</main>
+
+	<app-footer></app-footer>
+</div>
