--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -82,25 +82,24 @@
 				</li>
 			</ng-container>
 
-			<ng-container *ngIf='!isAuth$'>
+			<ng-container *ngIf='isAuth$ !== null'>
 				<li class='navLink header_balance'>
 					<div class='headerIcon'>
-						<img src='{ecocoin}'
-						     width='{24}'
-						     height='{24}/'>
+						<img src='./assets/images/img.png'
+						     width='24'
+						     height='24/'>
 					</div>
-					<p></p>
+					<p>0</p>
 				</li>
 
 				<a routerLink='/profile/promo_codes'
 				   class='navLink'>
 					<div class='headerIcon'>
-						<img src='{getUserInfo().photo_url}'
-						     class='photo_header/'>
+						<img src='./assets/images/34Syn2ezKLM.jpeg'
+						     class='photo_header'/>
 					</div>
 					<p></p>
 				</a>
-
 			</ng-container>
 
 		</ul>
