--- a/src/app/components/header/header.component.sass
+++ b/src/app/components/header/header.component.sass
@@ -1,5 +1,5 @@
 @use '/src/styles.sass' as gs
-@import "src/assets/styles/mixins.sass"
+@import "src/app/styles/mixins.sass"
 
 .header-wrapper
 	height: 80px
