--- a/src/app/components/modals/modal-containers/partners-login-from/partners-login-from.component.html
+++ b/src/app/components/modals/modal-containers/partners-login-from/partners-login-from.component.html
@@ -41,7 +41,7 @@
 			<app-button
 				[isLarge]='true'
 				[isPrimary]='true'
-				[submitFunc]='onSubmit("phone","password")'
+				(submitFunc)='onSubmit("phone","password")'
 				value='Получить код'></app-button>
 		</div>
 		<div class='modal__underLinks'>
@@ -54,7 +54,7 @@
 				value='Вход для партнёров'
 				[isLarge]='true'
 				[isPrimary]='false'
-				[submitFunc]='onSubmit'>
+				(submitFunc)='onSubmit'>
 			</app-button>
 		</div>
 	</form>
