--- a/src/app/components/modals/modal-content/login-email-form/login-email-form.component.html
+++ b/src/app/components/modals/modal-content/login-email-form/login-email-form.component.html
@@ -33,7 +33,7 @@
 		<app-button
 			[isLarge]='true'
 			[isPrimary]='true'
-			[submitFunc]='onSubmit("phone","password")'
+			(submitFunc)='onSubmit("phone","password")'
 			value='Вход'
 		></app-button>
 	</div>
@@ -53,7 +53,7 @@
 			value='Вход для партнёров'
 			[isLarge]='true'
 			[isPrimary]='false'
-			[submitFunc]='onSubmit'
+			(submitFunc)='onSubmit'
 		>
 		</app-button>
 	</div>
