--- a/src/app/components/card-list-switcher/card-list-switcher.component.sass
+++ b/src/app/components/card-list-switcher/card-list-switcher.component.sass
@@ -1,4 +1,4 @@
-@use './src/assets/styles/mixins' as gs
+@import "src/app/styles/mixins.sass"
 
 .switcherWrapper
 	width: 100%
@@ -10,14 +10,14 @@
 	margin-bottom: 24px
 	border-bottom: 1px #eaeaea solid
 .switchBtn
-	@include gs.mainNavLink
+	@include mainNavLink
 	font-size: 20px
 	&:not(:last-child)
 		margin-right: 24px
 
 
 .switchBtnActive
-	@include gs.mainNavLinkActive
+	@include mainNavLinkActive
 	font-size: 20px
 	&:not(:last-child)
 		margin-right: 24px
