--- a/src/app/components/filter-modal-container/filter-modal-container.component.sass
+++ b/src/app/components/filter-modal-container/filter-modal-container.component.sass
@@ -1,6 +1,9 @@
 .title
 	font-size: 28px
+
 .filterModal__container
+	border-top-left-radius: 30px
+	border-top-right-radius: 30px
 	position: absolute
 	bottom: 0
 	left: 0
@@ -8,10 +11,12 @@
 	width: 100%
 	height: 85%
 	padding: 24px
+
 .filterModal__firstRow
 	display: flex
 	justify-content: center
 	margin-bottom: 48px
+
 .filterModal__closeButton
 	height: 3px
 	width: 32px
