--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -65,7 +65,7 @@
 				Казань
 			</li>
 			<ng-container
-				*ngIf='getAuth'>
+				*ngIf='!auth.isAuthorized'>
 				<li class='navLink'>
 					<app-icon
 						[width]='24'
@@ -82,29 +82,35 @@
 				</li>
 			</ng-container>
 
-			<ng-container *ngIf='!getAuth'>
+			<ng-container *ngIf='auth.isAuthorized'>
 				<li class='navLink header_balance'>
 					<div class='headerIcon'>
 						<img src='./assets/images/img.png'
 						     width='24'
-						     height='24'/>
+						     height='24' />
 					</div>
 					<p>0</p>
+
 				</li>
 
-				<a routerLink='/profile/promo_codes'
+				<a routerLink='/profile/promocode'
 				   class='navLink'>
 					<div class='headerIcon'>
 						<img src='./assets/images/34Syn2ezKLM.jpeg'
-						     class='photo_header'/>
+						     class='photo_header' />
 					</div>
 					<p></p>
 				</a>
+
+				<button>
+					Выход
+				</button>
 			</ng-container>
 
 		</ul>
 		<div class='navLink header_balance header_mobile_auth'>
-			<button class='burgerMenu' (click)='openBurgerMenu()'>
+			<button class='burgerMenu'
+			        (click)='openBurgerMenu()'>
 				<app-icon [item]='"burger"'
 				          [width]='24'
 				          [height]='24'>
