--- a/src/app/styles/mixins.sass
+++ b/src/app/styles/mixins.sass
@@ -1,4 +1,4 @@
-@use "varibles.sass" as var
+@use "varibles" as var
 
 @mixin _900
 	@media (max-width: 900px)
@@ -9,7 +9,7 @@
 		@content
 
 @mixin _375
-	@media (max-width: 700px)
+	@media (max-width: 375px)
 		@content
 
 @mixin modal-default-font-settings
